<resources>
    <string name="app_name">carrot_market</string>
    <string name="check">확인</string>
    <string name="finish">완료</string>
    <string name="cancel">취소</string>
    <string name="main_neighbor_news_app_bar_title">동네소식</string>
    <string name="main_chat_app_bar_title">채팅</string>
    <string name="main_near_by_app_bar_title">내 근처</string>
    <string name="main_not_found_list">리스트를 불러올 수 없습니다.</string>
    <string name="my_carrot_app_bar_title">나의 당근</string>
    <string name="please_auth_town_fragment_title">따뜻한 거래를 시작해보세요!</string>
    <string name="please_auth_town_fragment_content">지금 동네인증을 하고 town 근처 이웃 count명과 거래하세요.</string>
    <string name="please_auth_town_fragment_start_button">동네인증하고 시작하기</string>
    <string name="product_price">price원</string>
    <string name="my_carrot_user_info">town #code</string>
    <string name="my_carrot_see_profile">프로필 보기</string>
    <string name="my_carrot_user_cell">판매내역</string>
    <string name="my_carrot_user_buy">구매내역</string>
    <string name="my_carrot_user_favorite">관심목록</string>
    <string name="my_carrot_my_town_setting">내 동네 설정</string>
    <string name="my_carrot_my_town_auth">내 동네 인증하기</string>
    <string name="my_carrot_my_keyward_alert">키워드 알림</string>
    <string name="my_carrot_my_collection_see">모아보기</string>
    <string name="my_carrot_my_town_posts">동네생활 글</string>
    <string name="my_carrot_my_town_post_comments">동네생활 댓글</string>
    <string name="my_carrot_my_town_post_title_list">동네생활 주제 목록</string>
    <string name="my_carrot_make_bis_profile">비즈프로필 만들기</string>
    <string name="my_carrot_region_advertisement">지역광고</string>
    <string name="my_carrot_invite_friend">친구 초대</string>
    <string name="my_carrot_share_carrot_market">당근마켓 공유</string>
    <string name="my_carrot_carrot_market_notice">공지사항</string>
    <string name="my_carrot_help_center">자주 묻는 질문</string>
    <string name="my_carrot_app_setting">앱 설정</string>
    <string name="auth_cellphone_app_bar_title">전화번호 인증</string>
    <string name="certificate_phone_number_input_hint">휴대폰 번호를 입력해주세요</string>
    <string name="certificate_notice_message">당근마켓은 휴대폰 번호로 가입해요. 번호는 <b>안전하게 보관</b>되며 어디에도 공개되지 않아요</string>
    <string name="certificate_take_auth_number_button">인증문자 받기</string>
    <string name="certificate_is_change_phone_number">전화번호가 변경되었나요?</string>
    <string name="certificate_find_id_for_email">이메일로 계정찾기</string>
    <string name="certificate_not_back">"가입단계 진행 중에는 뒤로 갈 수 없습니다."</string>
    <string name="certificate_app_bar_title">회원가입/로그인</string>
    <string name="certificate_auth_number_input_hint">인증 번호를 입력해주세요</string>
    <string name="certificate_warning">어떤 경우에도 타인에게 공유하지 마세요!</string>
    <string name="certificate_incorrect_auth_number">인증번호가 틀립니다</string>
    <string name="certificate_accept_link">이용약관 및 개인정보취급방침</string>
    <string name="certificate_re_take_auth_number_button">인증문자 다시 받기</string>
    <string name="certificate_accept_and_start_button">동의하고 시작하기</string>
    <string name="create_profile_app_bar_title">프로필 설정</string>
    <string name="create_profile_next_button">다음</string>
    <string name="create_profile_profile_nickname_hint">닉네임</string>
    <string name="create_profile_please_typing_nickname">닉네임을 입력해주세요.</string>
    <string name="create_profile_check_nickname_min">닉네임을 2자 이상 입력해주세요</string>
    <string name="create_profile_check_nickname_max">닉네임을 20자 이하로 입력해주세요</string>
    <string name="find_id_for_email_app_bar_title">이메일로 계정 찾기</string>
    <string name="find_id_for_email_email_input_hint">이메일 주소</string>
    <string name="find_id_for_email_take_auth_message_button">인증메일 받기</string>
    <string name="find_id_for_email_is_not_regist_message">이메일을 등록한 적이 없으세요?</string>
    <string name="find_id_for_email_call_help_center">문의하기</string>
    <string name="my_town_setting_app_bar_title">내 동네 설정</string>
    <string name="my_town_setting_select">동네 선택</string>
    <string name="my_town_setting_my_town_notice">선택한 지역을 삭제하시겠습니까?</string>
    <string name="my_town_setting_my_town_warning">지역은 최소 1개 이상 선택되어있어야합니다. 현재 설정된 동네를 변경하시겠어요?</string>
    <string name="my_town_setting_my_town_warning_check">네, 변경할게요</string>
    <string name="my_town_setting_find_town_by_currenct_location">내 동네 이름(동,읍,면)으로 검색</string>
    <string name="my_town_setting_find_town_by_currenct_location_button">현재 위치로 찾기</string>
    <string name="my_town_setting_related_town">관련주소 <b>도농동</b></string>
    <string name="seek_town_app_bar_title">게시글 보여줄 동네 고르기</string>
    <string name="seek_town_near_by_town">town과 근처 <u>동네 count개</u></string>
    <string name="seek_town_town_range_notice">선택한 범위의 게시글만 볼 수 있어요.</string>
    <string name="seek_town_town_range_minimum">내동네</string>
    <string name="seek_town_town_range_maxmum">근처동네</string>
    <string name="find_near_by_town">근처동네</string>
    <string name="delete_town_check">선택한 지역을 삭제하시겠습니까?</string>
    <string name="delete_town_warning">동네는 최소 1개이상 선택되어있어야합니다. 현재 설정된 동네를 병경하시겠어요?</string>
    <string name="delete_town_warning_ok">네, 변경할게요</string>
    <string name="used_product_posting_app_bar_title">중고거래 글쓰기</string>
    <string name="used_product_posting_pickture_count">0/10</string>
    <string name="used_product_posting_hint_title">제목</string>
    <string name="used_product_posting_won_sign">₩</string>
    <string name="used_product_posting_hint_price">가격 (선택사항)</string>
    <string name="used_product_posting_deal">가격제안 받기</string>
    <string name="used_product_posting_hint_content">town에 올릴 게시글 내용을 작성해주세요.<br>가품 및 판매금지품목은 게시가 제한될 수 있어요</br></string>
    <string name="used_product_posting_range">게시글 보여줄 동네 고르기</string>
    <string name="used_product_posting_selected_range">town과 근처 동네 count개</string>
    <string name="used_product_posting_category_title">카테고리</string>
    <string name="used_product_posting_temp_save">입력 중인 게시글이 임시 저장되었습니다.</string>
    <string name="used_product_posting_please_input_primary">제목, 카테고리, 내용은 필수 입력항목이에요</string>
    <string name="product_detail_app_bar_title">title</string>
    <string name="product_detail_favorite_and_view_count">관심 favorite · 조회 view</string>
    <string name="product_detail_user_report">이 게시글 신고하기</string>
    <string name="product_detail_pull_up">끌올</string>
    <string name="product_detail_price">price원</string>
    <string name="product_detail_deal">가격제안하기</string>
    <string name="product_detail_not_deal">가격제안불가</string>
    <string name="product_detail_chat">채팅으로 거래하기</string>
    <string name="product_detail_seller_item">name님의 판매 상품</string>
    <string name="product_detail_recommend">nickname님, 이건 어때요?</string>
    <string name="product_detail_add_favorite">관심목록에 추가됐어요.</string>
    <string name="favorite_list_app_bar_title">관심목록</string>
    <string name="favorite_list_host_used_product">중고거래</string>
    <string name="favorite_list_host_town_advertise">동네홍보</string>
    <string name="favorite_list_host_town_life">동네생활</string>
    <string name="favorite_list_not_found_favorite_list">아직 관심을 누른 name이 없아요.</string>
    <string name="sell_activity_app_bar_title">판매내역</string>
    <string name="sell_activity_host_sale">판매중</string>
    <string name="sell_activity_host_sold">거래완료</string>
    <string name="sell_activity_host_hide">숨김</string>
    <string name="sell_activity_send_sold_comment">거래후기 보내기</string>
    <string name="sell_activity_change_sold_out">거래완료로 변경</string>
    <string name="sell_activity_change_reservation">예약중으로 변경</string>
    <string name="sell_activity_list_not_found_sell_list">name 게시글이 없어요.</string>
    <string name="buy_list_app_bar_title">구매내역</string>
    <string name="buy_list_see_comment">작성한 후기 보기</string>
    <string name="app_setting_app_bar_title">설정</string>
    <string name="app_setting_sign_out_dialog_title">로그아웃</string>
    <string name="app_setting_sign_out_dialog_message">로그아웃 하시겠습니까?</string>
    <string name="app_setting_alert_setting_title">알림 설정</string>
    <string name="app_setting_alert_And_sound">알람 및 소리</string>
    <string name="app_setting_dont_touch_time_setting">방해금지 시간설정</string>
    <string name="app_setting_vibration">진동</string>
    <string name="app_setting_session_info_setting">계정 / 정보 관리</string>
    <string name="app_setting_group_view_user_setting">모아보기 사용자 관리</string>
    <string name="app_setting_blacklist_user_setting">차단사용자 관리</string>
    <string name="app_setting_no_show_post_user_setting">게시글 미노출 사용자 관리</string>
    <string name="app_setting_other_setting">기타 설정</string>
    <string name="app_setting_other">기타</string>
    <string name="app_setting_language_setting">언어 설정</string>
    <string name="app_setting_alert_cache">앱 캐시 정리하기</string>
    <string name="app_setting_license">오픈소스 라이선스</string>
    <string name="app_setting_version">버전 6.2.0</string>
    <string name="app_setting_sign_out">로그아웃</string>
    <string name="app_setting_delete_user">탈퇴하기</string>
    <string name="delete_app_bar_title">계정 삭제하기</string>
    <string name="delete_user_first_message">… name님과 이별인가요? 너무 아쉬워요.</string>
    <string name="delete_user_warning_message">계정을 삭제하면 매너온도, 게시글, 관심, 채팅 등 모든 활동 정보가 삭제됩니다. 계졍 삭제 후 7일간 다시 가입할 수 없어요.</string>
    <string name="delete_user_delete_question_message">name님 계정을 삭제하려는 이유가 궁급해요.</string>
    <string name="delete_user_please_select_delete_reason">선택해주세요</string>
    <string name="delete_user_reason_too_many">너무 많이 이용해요</string>
    <string name="delete_user_reason_too_many_response">앗, 그렇다면 저와 함께 조금 덜 사용하는 방법을 고민해봐요,. 이렇게 떠나시면 너무 슬픈걸요. 계정 삭제 대신 모든 알림을 끄고 잠시 쉬어보는 건 어때요?</string>
    <string name="delete_user_reason_not_found_wanted_item">사고 싶은 물품이 없어요</string>
    <string name="delete_user_reason_not_found_wanted_item_response">혹시 사고 싶은 물품을 검색해보고나 키워드 알림으로 등록해보셨나요? 키워드 알림으로 등록하면 물품이 올라오자마자 알림이 온답니다. 키워드를 등록하고 알림을 기다려보세요.\n\n정확한 상품명이 아닌 가방, 운동화 같은 상위 카테고리의 키워드를 등록하면 알림을 더 많이 받을 수 있어요. (예: 자전거, 원피스, 에어컨, 유모차 등)</string>
    <string name="delete_user_reason_not_found_wanted_item_go_to_search">지금 검색하러 가기</string>
    <string name="delete_user_reason_not_found_wanted_item_go_to_keyword">지금 키워드 알림 등록하기</string>
    <string name="delete_user_reason_not_sold_product">물품이 안팔려요</string>
    <string name="sold_app_bar_title">구매자 선택</string>
    <string name="sold_success"><b>거래가 완료됐어요.</b></string>
    <string name="please_select_buyer">구매자를 선택해주세요.</string>
    <string name="sold_product">거래한 물건</string>
    <string name="sold_product_name">name</string>
    <string name="not_select_now">지금 안할래요.</string>
    <string name="find_buyer_in_recent_chat"><u>최근 채팅 목록에서 구매자 찾기</u></string>
    <string name="buyer_name">name</string>
    <string name="buyer_town">town</string>
    <string name="last_chat_time">time</string>
    <string name="sold_comment_app_bar_title">거래 후기 보내기</string>
    <string name="sold_out_product_text">거래한 물건</string>
    <string name="how_do_sold">name님과 거래가 어떠셨나요?</string>
    <string name="buyer_dont_know">선택항목은 상대방이 알 수 없어요.</string>
    <string name="great_comment">최고에요!</string>
    <string name="normal_comment">좋아요!</string>
    <string name="come_to_me">제가 있는 곳 까지 와서 거래했어요.</string>
    <string name="kind_and_manner">친절하고 매너가 좋아요.</string>
    <string name="fast_recomment">응답이 빨라요.</string>
    <string name="bad_comment">별로에요</string>
    <string name="no_more_sold_this_people">이 분과 거래하고 싶지 않아요.</string>
    <string name="car_man">차에서 내리지도 않고 창문만 열고 거래하려고 해요.</string>
    <string name="deal_man">무리하게 가격을 깎아요.</string>
    <string name="break_time_rule">시간약속을 안 지켜요.</string>
    <string name="absolute_express">무조건 택배거래만 하려고 해요.</string>
    <string name="not_read_chat">채팅 메시지를 보내도 답이 없어요.</string>
    <string name="not_set_time">예약만 해놓고 거래 시간을 명확하게 알려주지 않아요.</string>
    <string name="late_time_promise">너무 늦은 시간이나 새벽에 연락해요</string>
    <string name="dont_come_promise_location">약속 장소에 나타나지 않았어요.</string>
    <string name="delete_time">거래 시간과 장소를 정한 후 거래 직전에 취소했어요.</string>
    <string name="refuse">단순 변심으로 환불을 요구해요.</string>
    <string name="not_kind">불친절해요.</string>
</resources>