<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.skott.softsquared.outsourcing_simulation.src.util.custom_views.CarrotMarketAppbar
        android:id="@+id/buyer_selector_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:back_button="true"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sold_app_bar_title" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/sold_success_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintVertical_bias="0"
    app:layout_constraintTop_toBottomOf="@id/buyer_selector_app_bar"
    app:layout_constraintBottom_toTopOf="@id/product_check_layout">

    <ImageView
        android:id="@+id/sold_check_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/sold_image"
        app:layout_constraintBottom_toTopOf="@id/sold_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".8"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/sold_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sold_success"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/please_select_buyer_text_view"
        app:layout_constraintTop_toBottomOf="@id/sold_check_image_view" />

    <TextView
        android:id="@+id/please_select_buyer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_select_buyer"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sold_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_check_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/my_carrot_bg"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/product_check_guideline"
        app:layout_constraintTop_toBottomOf="@id/sold_success_layout">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/item_default_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sold_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sold_product"
            app:layout_constraintTop_toTopOf="@id/product_image_view"
            app:layout_constraintBottom_toTopOf="@id/sold_product_name"
            app:layout_constraintStart_toEndOf="@id/product_image_view"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/sold_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:text="@string/sold_product_name"
            app:layout_constraintTop_toBottomOf="@id/sold_product"
            app:layout_constraintBottom_toBottomOf="@id/product_image_view"
            app:layout_constraintStart_toStartOf="@id/sold_product"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/product_check_guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/not_check_buyer_guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/buyer_selector_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_check_layout"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/find_buyer_in_recent_chat"
        android:textColor="@color/carrot_market_text_hyperlink_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buyer_selector_recycler_view"/>
    <android.widget.Button
        android:id="@+id/not_check_buyer_now_Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/not_select_now"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/carrot_market_disable_color"
        android:gravity="center"
        android:background="@color/my_carrot_bg"
        app:layout_constraintTop_toTopOf="@id/not_check_buyer_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>