<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_check_layout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/profile_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/last_chat"
        app:layout_constraintStart_toEndOf="@id/user_image_view"
        app:layout_constraintTop_toTopOf="@id/user_image_view"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/buyer_name" />

    <TextView
        android:id="@+id/dong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:layout_marginStart="8dp"
        tools:text="@string/buyer_town" />

    <TextView
        android:id="@+id/last_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:lines="1"
        android:maxLength="19"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/user_image_view"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:text="마지막 대화 " />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/last_chat"
        app:layout_constraintTop_toTopOf="@id/last_chat"
        app:layout_constraintBottom_toBottomOf="@id/last_chat"
        tools:text="@string/last_chat_time" />

</androidx.constraintlayout.widget.ConstraintLayout>
